--- a/repositoryUserInterface/app/views/Application/display.html
+++ b/repositoryUserInterface/app/views/Application/display.html
@@ -22,9 +22,9 @@
 		<script src="@{'/public/javascripts/jquery.noty.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/jquery-ui-1.8.20.custom.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/highcharts.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/utilityFunctions.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/exporting.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/jquery-ui-timepicker-addon.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 
 		<!--Google API-->
@@ -33,6 +33,8 @@
 
 		<script type="text/javascript">
 			$(document).ready(function() {
+
+				createHeader();
 
 				$(".errorVisual").hide();
 				$("#labelSensorSelect").hide();
@@ -154,17 +156,6 @@
 	//*****************************************Chart*****************************************************/
 				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
 
-				setNavURL("#devices" ,'href', temp+URL_DEVICES);
-				setNavURL("#deviceactuate" ,'href',temp+URL_ACTUATE);
-				setNavURL("#visualization",'href', temp+URL_VISUALIZATION);
-				setNavURL("#repositoryInformation",'href',temp+URL_REPOSITORY_INFO);
-				setNavURL("#home",'href',temp+URL_HOME);
-				setNavURL("#logout",'href',temp+URL_LOGOUT_USER);
-				setNavURL("#speak",'href',temp+URL_SPEAK_INPUT);
-			
-				
-
-				
 				
 				$("#logout").click(function() {
 
@@ -972,30 +963,7 @@
 				<br />
 				<br />
 				<span style="font-size:25px;">Sense - Interact - Actuate</span></h1>
-
-
-				<nav>
-					<ul>
-						<li>
-							<a id="home">Home</a>
-						</li>
-						<li>
-							<a id="devices"  >Devices</a>
-						</li>
-						<li>
-							<a id="deviceactuate"> Actuation</a>
-						</li>
-						<li>
-							<a id="visualization" class="active">Visualization</a>
-						</li>
-						<li>
-							<a id="repositoryInformation">Repository</a>
-						</li>
-						<li>
-							<a id="speak" >Speak</a>
-						</li>
-						
-					</ul>
+				<nav id="navHeader">					
 				</nav>
 				<br />
 				<br />
