--- a/repositoryUserInterface/app/views/Application/speak.html
+++ b/repositoryUserInterface/app/views/Application/speak.html
@@ -20,6 +20,8 @@
 		<script type="text/javascript">
 			$(document).ready(function() {
 
+				createHeader();
+
 				var mp3ID=1;
 				var USER_KEY;
 				setup();
@@ -41,13 +43,7 @@
 					$("#normal").show();
 				});
 				
-				setNavURL("#devices" ,'href', temp+URL_DEVICES);
-				setNavURL("#deviceactuate" ,'href',temp+URL_ACTUATE);
-				setNavURL("#visualization",'href', temp+URL_VISUALIZATION);
-				setNavURL("#repositoryInformation",'href',temp+URL_REPOSITORY_INFO);
-				setNavURL("#home",'href',temp+URL_HOME);
-				setNavURL("#logout",'href',temp+URL_LOGOUT_USER);
-				setNavURL("#speak",'href',temp+URL_SPEAK_INPUT);
+				
 				$("#logout").click(function() {
 
 					window.location = URL_LOGOUT_USER;
@@ -106,28 +102,7 @@
 				<br />
 				<br />
 				<span style="font-size:25px;">Sense - Interact - Actuate</span></h1>
-				<nav>
-					<ul>
-						<li>
-							<a id="home" >Home</a>
-						</li>
-						<li>
-							<a id="devices" >Devices</a>
-						</li>
-						<li>
-							<a id="deviceactuate" >Actuation</a>
-						</li>
-						<li>
-							<a id="visualization">Visualization</a>
-						</li>
-						<li>
-							<a id="repositoryInformation">Repository</a>
-						</li>
-						<li>
-							<a id="speak" class="active">Speak</a>
-						</li>
-						
-					</ul>
+				<nav id ="navHeader">					
 				</nav>
 				<br />
 				<br />
