Added /guardrule API

--- a/repositoryUserInterface/app/views/Application/editdevice.html
+++ b/repositoryUserInterface/app/views/Application/editdevice.html
@@ -33,7 +33,7 @@ lang="en">
 				var deviceToEdit = $("#devicename").val();
 				var isDevice = $("#isdevice").val();
 				var mode = $("#mode").val();
-				
+				alert(deviceToEdit);
 				var deleteDeviceOrTemplate;
 				var findDeviceOrTemplate;
 				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
