--- a/repositoryUserInterface/app/views/Application/display.html
+++ b/repositoryUserInterface/app/views/Application/display.html
@@ -28,7 +28,7 @@
 		<script src="@{'/public/javascripts/jquery-ui-timepicker-addon.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 
 		<!--Google API-->
-		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDDZ2cfkjgRuqcVocQt_xt4esmqpNQT3KM&sensor=false"></script>
+		<!--<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDDZ2cfkjgRuqcVocQt_xt4esmqpNQT3KM&sensor=false"></script>-->
 		<!--Google API-->
 
 		<script type="text/javascript">
