--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -212,7 +212,7 @@
 				<span style="font-size:25px;">Sense - Interact - Actuate</span><br />
 				</h2>
 				<nav>
-					<p class="pbox">
+					<p class="loginbox">
 						<label for="sign_in_username">Username</label>
 						<input type="text" size="10" name="sign_in_username" id="sign_in_username" />
 						<br />
@@ -225,7 +225,7 @@
 					</p>
 					<ul>
 						<li>
-							<a style="float:right;" name="sign_in_submit" href="#" id="sign_in_submit">Sign In</a>
+							<a style="float:right; height: 20px; width:17%;" name="sign_in_submit" href="#" id="sign_in_submit">Sign In</a>
 						</li>
 					</ul>
 				</nav>
@@ -285,12 +285,12 @@
 					<span id="span_sign_up_email"></span>
 					<br />
 					<nav>
-						<p class="pbox">
+						<p class="loginbox">
 							<label name="sign_up_submit" id ="sign_up_submit" class="buttons"> Sign Up </label>
 						</p>
 					</nav>
 				</aside>
-				<article
+				<article>
 				<footer>
 				<p>Smart Rooms</p>
 				<p>A Novel approach to integrate the physical and the cyber world.</p>
