--- a/repositoryUserInterface/app/views/Application/device.html
+++ b/repositoryUserInterface/app/views/Application/device.html
@@ -15,7 +15,7 @@
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/jquery-ui-1.8.20.custom.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-			<script type="text/javascript" src="@{'/public/javascripts/utilityFunctions.js'}"></script>
+			<script src="@{'/public/javascripts/utilityFunctions.js'}" type="text/javascript" ></script>
 		<script type="text/javascript">
 			$(document).ready(function() {
 
@@ -112,12 +112,11 @@
 
 					}
 
-				function createAccordionHeader(accordionId,deviceName,deviceLocation,deviceId)
-					{
+				function createAccordionHeader(accordionId,deviceName,deviceLocation,deviceId) {
 						
 //alert(deviceName);
 $("#"+accordionId).append("<h2><a href=\"#\">" + deviceName + "  | " + deviceLocation + "<br/> </a></h2><div id=\"" + deviceId + "\"></div>");
-					}
+				}
 
 				function appendElementToParent(parentReference,childHTML)
 				{
@@ -159,7 +158,7 @@ $("#"+accordionId).append("<h2><a href=\"#\">" + deviceName + "  | " + deviceLoc
 												if(data[RESPONSE_STATUS_CODE] == SUCCESS) {
 													window.location.reload();
 												} else {
-													alertGetDeviceError(data[RESPONSE_MESSAGE]);
+													//alertGetDeviceError(data[RESPONSE_MESSAGE]);
 												}
 
 											});
@@ -340,7 +339,7 @@ $("#"+accordionId).append("<h2><a href=\"#\">" + deviceName + "  | " + deviceLoc
 						});
 					} catch(e) {
 						//alert("here i am");
-						alertGetDeviceError(e);
+						//alertGetDeviceError(e);
 					}
 					return deviceOrTemplateDataList[index];
 				}
