--- a/repositoryUserInterface/app/views/Application/editdevice.html
+++ b/repositoryUserInterface/app/views/Application/editdevice.html
@@ -19,7 +19,7 @@ lang="en">
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/jquery-ui-1.8.20.custom.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-		<script type="text/javascript" src="@{'/public/javascripts/utilityFunctions.js'}"></script>
+		<script src="@{'/public/javascripts/utilityFunctions.js'}" type="text/javascript" ></script>
 		<script type="text/javascript">
 
 			$(document).ready(function() {
@@ -33,11 +33,11 @@ lang="en">
 				var deviceToEdit = $("#devicename").val();
 				var isDevice = $("#isdevice").val();
 				var mode = $("#mode").val();
-				alert(deviceToEdit);
+				
 				var deleteDeviceOrTemplate;
 				var findDeviceOrTemplate;
 				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
-				//alert(temp);
+				
 				if(isDevice == "true") {
 					deleteDeviceOrTemplate = temp+URL_DELETE_DEVICE;
 					findDeviceOrTemplate = temp+URL_FIND_DEVICE;
