--- a/repositoryUserInterface/app/views/Application/home.html
+++ b/repositoryUserInterface/app/views/Application/home.html
@@ -13,7 +13,7 @@
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script type="text/javascript" src="@{'/public/javascripts/utilityFunctions.js'}"></script>
-		<script type="text/javascript" src="@{'/public/javascripts/speakClient.js'}"></script>
+		<!--<script type="text/javascript" src="@{'/public/javascripts/speakClient.js'}"></script>-->
 		
 		<script type="text/javascript">
 			$(document).ready(function() {
@@ -53,10 +53,10 @@
 			<p class="space"></p>
 			<img src="@{'/public/images/background_2.jpg'}" style="text-align:center" width="75%" height="350px"/>
 			<div id="status"></div>
-	<div id="wami"></div>
-	<hr/>
+			<div id="wami"></div>
+			<hr/>
 
-	<p class="space"></p>
+			<p class="space"></p>
 			<!--div id="input_div"><label for="input_message">Input</label>
 						<p name="input_message" id="input_message"></p></div>
 			<hr/>
